--- a/1D.html
+++ b/1D.html
@@ -15,6 +15,14 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.min.css" rel="stylesheet">
+
+    <style>
+      @media (max-width: 576px) {
+        .imgheader{
+          display: none;
+        }
+    }
+    </style>
 </head>
 
 <body class="grey lighten-3">
@@ -79,16 +87,15 @@
             <!--Grid column-->
             <div class="col-md-12 mb-4">
                 <!--Featured Image-->
-                <div class="card mb-4 wow fadeIn">
-                    <img src="img/IMG_20160814_102257.jpg" class="img-fluid" alt="" style="height:400px">
+                <div class="card mb-4 wow fadeIn imgheader">
+                    <img src="img/IMG_20160814_102257.jpg" class="img" alt="" style="height:400px;">
                 </div>
                 <!--/.Featured Image-->
 
                 <!--Card-->
                 <div class="card mb-4 wow fadeIn">
-                  <div class="row" style="padding-left:50px;padding-top: 40px;padding-right:50px" >
-                    <div class="col-md-12 mb-4">
-                        <div class="container mt-3">
+                  <div class="row" style="padding-left:25px;padding-top: 20px;padding-right:25px;" >
+                    <div class="col-12 mb-4">
                                 <h2>Paket Wisata 1 DAY</h2>
                                 <p>Paket Wisata Jogja 1 Hari yang kami kemas dalam Paket 1 ini akan mengunjungi 3 tempat wisata, wisata kuliner dan shopping tour. Tempat wisata tersebut antara lain: Candi Borobudur, The World Landmarks Merapi Park, Jeep Lava Tour Merapi dan Malioboro.</p>  
                                 
@@ -268,7 +275,6 @@
                                 </div>
                               </div>
                             </div>
-                        </div>
                 </div>
                 <!--/.Card-->
             </div>
