--- a/3D2N.html
+++ b/3D2N.html
@@ -15,6 +15,14 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.min.css" rel="stylesheet">
+    <style>
+      @media (max-width: 576px) {
+        .imgheader{
+          display: none;
+        }
+    }
+    </style>
+</head>
 </head>
 
 <body class="grey lighten-3">
@@ -79,16 +87,15 @@
             <!--Grid column-->
             <div class="col-md-12 mb-4">
                 <!--Featured Image-->
-                <div class="card mb-4 wow fadeIn">
+                <div class="card mb-4 wow fadeIn imgheader">
                     <img src="img/_MG_7158.JPG" class="img-fluid" alt="" style="height:400px">
                 </div>
                 <!--/.Featured Image-->
 
                 <!--Card-->
                 <div class="card mb-4 wow fadeIn">
-                  <div class="row" style="padding-left:50px;padding-top: 40px;padding-right:50px" >
-                    <div class="col-md-12 mb-4">
-                        <div class="container mt-3">
+                  <div class="row" style="padding-left:25px;padding-top: 20px;padding-right:25px;" >
+                    <div class="col-12 mb-4">
                                 <h2>Paket Wisata <span>3 DAY 2 NIGHT</span></h2>
                                 <p>Paket Wisata Jogja yang kami kemas dalam Paket 3D2N ini akan mengunjungi 9 tempat wisata, wisata kuliner dan shopping tour. Anda dapat meminta referensi tempat wisata lain diluar paket ini nanti tim kami akan membantu mengatur jadwal wisata anda.</p>  
                                 
@@ -198,7 +205,6 @@
                                 </div>
                               </div>
                             </div>
-                        </div>
                 </div>
                 <!--/.Card-->
             </div>
