--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       
             <!--Second slide-->
             <div class="carousel-item">
-              <div class="view" style="background-image: url('img/IMG_6775.jpg'); background-repeat: no-repeat; background-size: cover;">
+              <div class="view" style="background-image: url('img/IMG_6775.JPG'); background-repeat: no-repeat; background-size: cover;">
       
                 <!-- Mask & flexbox options-->
                 <div class="mask rgba-black-light d-flex justify-content-left align-items-center">
